# drrickorang

LoopbackApp/: .gitignore  Android.mk  AndroidManifest.xml  PrivacyPolicy.md  README  build.gradle  local.properties  proguard.cfg
LoopbackApp/app/: build.gradle
LoopbackApp/app/src/main/: Android.mk  Android.mk_  AndroidManifest.xml
LoopbackApp/app/src/main/cpp/: Android.mk  CMakeLists.txt  jni_native.h  loopback.c  loopback_sles.h  sles.cpp  sles.h
LoopbackApp/app/src/main/cpp/audio_utils/: atomic.h  fifo.c  roundup.h
LoopbackApp/app/src/main/cpp/lb2/: audio_buffer.h  logging.h  loopback2.h  loopback_test.cpp  loopback_test.h  sound_system.h  sound_system_echo.cpp  test_context.cpp
LoopbackApp/app/src/main/cpp/lb2/oboe/src/aaudio/: AAudioLoader.cpp
LoopbackApp/app/src/main/jni/: Android.mk  byte_buffer.c  byte_buffer.h  jni_native.c  jni_sles.c  jni_sles.h  loopback.h  sles.cpp  sles.h
LoopbackApp/app/src/main/jni/audio_utils/: atomic.c  atomic.h  fifo.c  fifo.h  roundup.c
LoopbackApp/app/src/main/jni/lb2/: logging.h  loopback2.cpp  sample.h  sound_system_aaudio.cpp  sound_system_aaudio.h  sound_system_echo.h  test_context.h  util.h
LoopbackApp/app/src/main/res/drawable-xxxhdpi/: togglebutton_state_drawable.xml
LoopbackApp/app/src/main/res/layout/: about_activity.xml  buffer_period_activity.xml  glitches_activity.xml  heatmap_window.xml  latency_activity.xml  main_activity.xml  player_buffer_period_activity.xml  recorder_buffer_period_activity.xml  report_window.xml  settings_activity.xml  settings_picker.xml
LoopbackApp/app/src/main/res/menu/: tool_bar_menu.xml
LoopbackApp/app/src/main/res/raw/: loopback_listener
LoopbackApp/app/src/main/res/values/: strings.xml
LoopbackApp/gradle/wrapper/: gradle-wrapper.properties
LoopbackApp/jni/: jni_sles.c
LoopbackApp/res/layout/: settings_activity.xml
LoopbackApp/res/values/: strings.xml
LoopbackApp/src/org/drrickorang/loopback/: AudioFileOutput.java
(+44 files in other folders)
